log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 09:28:14 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
========================================
257e61c
Thu May 14 09:34:47 PM UTC 2026: 
 graph.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
e6c26ee
Thu May 14 09:43:30 PM UTC 2026: 
 graph.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:40:35: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   40 |     if(map_search(g->adjacencyMap,label) != NULL) return;
      |                                   ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
11b8fef
Thu May 14 09:45:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51caf04
Thu May 14 10:07:47 PM UTC 2026: 
 graph.c | 28 ++++++++++++++++++----------
 1 file changed, 18 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:51: error: ‘v’ undeclared (first use in this function)
   31 |     Graph* grafo = (Graph*) malloc(sizeof(Graph));v // se reserva memoria para el grafo
      |                                                   ^
graph.c:31:51: note: each undeclared identifier is reported only once for each function it appears in
graph.c:31:52: error: expected ‘;’ before ‘if’
   31 |     Graph* grafo = (Graph*) malloc(sizeof(Graph));v // se reserva memoria para el grafo
      |                                                    ^
      |                                                    ;
   32 |     if(grafo == NULL) return NULL; // si hubo un error en la reserva de memoria se retorna el null
      |     ~~                                              
graph.c: In function ‘addEdge’:
graph.c:55:5: error: implicit declaration of function ‘list_pushback’; did you mean ‘list_pushBack’? [-Wimplicit-function-declaration]
   55 |     list_pushback(par->value,arista);
      |     ^~~~~~~~~~~~~
      |     list_pushBack
84512c7
Thu May 14 10:08:00 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:51: error: ‘v’ undeclared (first use in this function)
   31 |     Graph* grafo = (Graph*) malloc(sizeof(Graph));v // se reserva memoria para el grafo
      |                                                   ^
graph.c:31:51: note: each undeclared identifier is reported only once for each function it appears in
graph.c:31:52: error: expected ‘;’ before ‘if’
   31 |     Graph* grafo = (Graph*) malloc(sizeof(Graph));v // se reserva memoria para el grafo
      |                                                    ^
      |                                                    ;
   32 |     if(grafo == NULL) return NULL; // si hubo un error en la reserva de memoria se retorna el null
      |     ~~                                              
53b9e0a
Thu May 14 10:08:18 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d30542b
Thu May 14 10:14:33 PM UTC 2026: 
 graph.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  8|2
========================================
adbdd11
Thu May 14 10:21:27 PM UTC 2026: 
 graph.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:71:28: error: invalid use of undefined type ‘struct List’
   71 |     for(int i = 0; listaSRC[i] != NULL; i++)
      |                            ^
graph.c:71:20: error: invalid use of incomplete typedef ‘List’
   71 |     for(int i = 0; listaSRC[i] != NULL; i++)
      |                    ^~~~~~~~
graph.c:73:31: error: invalid use of undefined type ‘struct List’
   73 |             if(strcmp(listaSRC[i]->target,label2) == 0)
      |                               ^
graph.c:73:23: error: invalid use of incomplete typedef ‘List’
   73 |             if(strcmp(listaSRC[i]->target,label2) == 0)
      |                       ^~~~~~~~
graph.c:76:32: error: invalid use of undefined type ‘struct List’
   76 |                 return listaSRC[i]->weight;
      |                                ^
graph.c:76:24: error: invalid use of incomplete typedef ‘List’
   76 |                 return listaSRC[i]->weight;
      |                        ^~~~~~~~
b197915
Thu May 14 10:23:43 PM UTC 2026: 
 graph.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:71:13: error: statement with no effect [-Werror=unused-value]
   71 |     for(pos != NULL)
      |             ^
graph.c:71:20: error: expected ‘;’ before ‘)’ token
   71 |     for(pos != NULL)
      |                    ^
graph.c:71:20: error: expected expression before ‘)’ token
cc1: all warnings being treated as errors
c97535f
